# republic

./: 404.html  CNAME  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
docs/: index.md  quickstart.md
docs/guides/: authentication.md  breaking-changes.md  chat.md  embeddings.md  stream-events.md  tape.md  text.md  tools.md
examples/: 01_quickstart_chat.py  02_tools_auto_and_manual.py  03_tape_handoff_and_query.py  05_text_and_embeddings.py  06_openai_codex_oauth.py  07_github_copilot_oauth.py
guides/authentication/: index.html
guides/breaking-changes/: index.html
guides/chat/: index.html
guides/embeddings/: index.html
guides/stream-events/: index.html
guides/tape/: index.html
guides/text/: index.html
guides/tools/: index.html
philosophy/: index.html
quickstart/: index.html
search/: search_index.json
src/republic/: __about__.py  __init__.py  conversation.py  llm.py
src/republic/auth/: __init__.py  github_copilot.py  openai_codex.py
src/republic/clients/: _async_bridge.py  _internal.py  chat.py  embedding.py  github_copilot.py  openai_codex.py  text.py
src/republic/clients/parsing/: __init__.py  common.py  completion.py  messages.py  responses.py  types.py
src/republic/core/: __init__.py  client_registry.py  errors.py  execution.py  provider_policies.py  request_adapters.py  results.py
src/republic/providers/: __init__.py  anthropic.py  codecs.py  gemini.py  github_copilot.py  hookspecs.py  mistral.py  openai.py  runtime.py  sse.py  types.py
src/republic/tape/: __init__.py  context.py  entries.py  format.py  manager.py  query.py  store.py
src/republic/tools/: executor.py
tests/: conftest.py  fakes.py  test_auth_resolver.py  test_github_copilot_transport.py  test_openai_codex_transport.py  test_parsing_registry.py  test_provider_codecs.py  test_provider_policies.py  test_provider_runtime.py  test_responses_handling.py  test_tape_contract.py  test_user_experience.py
