[project]
name = "republic"
version = "0.5.6"
description = "Build LLM workflows like normal Python while keeping a full audit trail by default."
authors = [
    { name = "Chojan Shang", email = "psiace@apache.org" },
    { name = "Frost Ming", email = "me@frostming.com" },
]
readme = "README.md"
keywords = [
    "ai",
    "agents",
    "any-llm",
    "context",
    "llm",
    "openai",
    "openrouter",
    "python",
    "routing",
    "tape",
    "tools",
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "any-llm-sdk>=1.7.0",
    "authlib>=1.6.5",
    "httpx>=0.28.1",
    "pydantic>=2.7.0",
]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://getrepublic.org"
Repository = "https://github.com/bubbuild/republic"
Documentation = "https://getrepublic.org"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "tox-uv>=1.29.0",
    "ty>=0.0.8",
    "ruff>=0.14.10",
    "mkdocs>=1.6.1",
    "mkdocs-terminal>=4.8.0",
    "mkdocstrings[python]>=1.0.0",
    "pymdown-extensions>=10.12",
    "pytest-asyncio>=1.3.0",
    "prek>=0.3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/republic"]

[tool.ty.environment]
python = "./.venv"
python-version = "3.11"

[tool.ty.src]
include = ["src", "tests"]
exclude = ["refer", "site", ".venv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["asyncio: mark async tests"]

[tool.ruff]
target-version = "py311"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
preview = true
